--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,15 +12,25 @@ tower-http = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 chrono = { workspace = true }
-dotenv = "0.15"
-diesel = { version = "2.1", features = ["postgres", "chrono", "r2d2", "serde_json"] }
+dotenvy = "0.15"
+diesel = { version = "2.2.3", features = ["postgres", "chrono", "r2d2", "serde_json"] }
 diesel_migrations = "2.1"
 r2d2 = "0.8"
-r2d2-diesel = "1.0"
+# Rate limiting
+tower_governor = "0.3"
+futures = "0.3"
 uuid = { workspace = true }
+argon2 = "0.5"
 bcrypt = "0.15"
 regex = "1.0"
+# Input sanitization and XSS protection
+html-escape = "0.2"
+ammonia = "4.0"
+maplit = "1.0"
 once_cell = "1.19"
 sysinfo = "0.29"
 hex = "0.4"
-sha2 = "0.10" 
+sha2 = "0.10"
+# Backup encryption
+aes-gcm = "0.10"
+rand = "0.8" 
